# haskell_cis194

./: README.md
homework1/: homework1.cabal
homework1/src/: Main.hs
homework10/: AParser.hs
homework11/: SExpr.hs
homework12/: homework12.cabal
homework12/src/: Main.hs  Risk.hs
homework5/: homework5.cabal
homework5/src/: Calc.hs  Main.hs
homework6/: Fibonacci.hs
homework7/: homework7.cabal
homework7/src/: Editor.hs  JoinList.hs  Scrabble.hs
homework8/: Party.hs
